# turing_machine

./: .gitignore  Cargo.toml  README.md  REUSE.toml
src/: exhaustive_words.rs  main.rs  translations.rs  turing_machine.rs
src/turing_machine/: cell.rs  core.rs  tape.rs
